# Textly

./: .gitignore  docker-compose.test.yml  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/connections/: mongo.py
backend/core/: auth.py  config.py  database.py  security.py  utils.py
backend/repositories/: note.py  repository.py  user.py
backend/routers/: auth.py  folder.py  note.py  repository.py
backend/schemas/: folder.py  note.py  repository.py  user.py
backend/services/: auth.py  folder.py  note.py  repository.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/components/auth/: AuthPage.module.css  AuthPage.tsx
frontend/src/components/auth/form/: AuthForm.module.css  LoginForm.tsx  RegisterForm.tsx
frontend/src/components/auth/header/: AuthHeader.module.css  AuthHeader.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/services/auth/: authService.ts
