[project]
name = "Textly_Backend"
version = "0.1.0"
description = "API com FastAPI, MongoDB (Beanie)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "motor==3.7.1",
    "pymongo==4.15.5",
    "beanie==2.0.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "pyjwt==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "email-validator==2.3.0",
    "python-jose[cryptography]==3.5.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
]

[tool.ruff]
# Alvo da versão do Python
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# E: Erros do pycodestyle
# F: Pyflakes (erros lógicos)
# I: isort (organização de imports)
# B: flake8-bugbear (bugs comuns)
# UP: pyupgrade (sugere sintaxe Python nova)
select = ["E", "F", "I", "B", "UP", "N", "C90"]
ignore = ["E501", "B008"] # Ignora linha muito longa e Depends em defaults (FastAPI)

[tool.ruff.lint.isort]
# Deixa os imports do FastAPI e Beanie bem organizados
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
# Complexidade máxima permitida para funções
max-complexity = 10

[tool.ruff.format]
# Configurações de estilo semelhantes ao Black
quote-style = "double"
indent-style = "space"